--- a/react-practice/src/content/Todos/Todos.module.css
+++ b/react-practice/src/content/Todos/Todos.module.css
@@ -1,12 +1,22 @@
 .todos {
-    max-width: 300px;
-    margin: 30px auto;
+    border-radius: 5px;
+    box-shadow:0 0 5px 2px grey;
+    padding: 20px 30px;
+    margin: 30px 0;
+    background: white;
+}
+
+.todosBody {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .title {
     text-align: center;
 }
 .todosItem {
+    width: 250px;
     border: 1px solid black;
     margin: 10px;
     background:coral;
@@ -21,11 +31,42 @@
     background: greenyellow;
 }
 
+.done p{
+    text-decoration: line-through;
+}
+
 .todosBtn {
-    width: 70px;
+    width: 30px;
     height: 30px;
     border: none;
     outline: none;
     background: rgba(71, 71, 71, 0.61);
     color: whitesmoke;
+    margin-left: 5px;
+}
+
+.todosCheckbox {
+    margin-right: 5px;
+}
+
+.todoForm {
+    text-align:center;
+    height: 200px;
+}
+
+.todoFormText {
+    margin-right: 10px;
+    resize: none;
+    width: 300px;
+    height: 80px;
+    display: block;
+    margin:  0 auto 10px;
+
+}
+
+.todoFormBtn {
+    border: none;
+    background: black;
+    color: white;
+    padding: 5px 8px;
 }
