--- a/react-practice/src/content/Articles/Articles.module.css
+++ b/react-practice/src/content/Articles/Articles.module.css
@@ -1,8 +1,42 @@
-.articles {
-    border-radius: 5px;
-    box-shadow:0 0 5px 2px grey;
-    padding: 20px 30px;
-    margin: 30px 0;
-    background: #fff;
+.list {
+    list-style: none;
+    text-align: left;
+    max-width: 800px;
+    margin: auto; 
+  
+}
 
+.link {
+  
+    color: rgb(21, 14, 116);
+}
+
+.list li {
+    padding: 5px 0;
+}
+
+.form {
+    max-width: 500px;
+    display: flex;
+    margin: auto;
+    border: 1px solid black;
+    background-color: #fff;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.searchField {
+   display: inline-block;
+   width: 100%;
+   font-size: 20px;
+    border: none;
+    outline: none;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.searchBtn {
+    display: inline-block;
+    border: none;
+    outline: none;
 }
