--- a/react-practice/src/styles.css
+++ b/react-practice/src/styles.css
@@ -1,3 +1,23 @@
 body{
     background: rgb(207, 207, 207);
 }
+
+.mainBox {
+    border-radius: 5px;
+    box-shadow:0 0 5px 2px grey;
+    padding: 20px 30px;
+    margin: 30px 0;
+    background: #fff;
+    text-align: center;
+
+}
+
+.hidenFooter {
+    width: 100%;
+    height: 100px;
+    visibility: hidden;
+}
+
+ul {
+    margin: 0;
+}
